# rose

./: .env.example  .gitignore  Cargo.toml  app.config.ts  biome.json  package.json  panda.config.ts  playwright.config.ts  tsconfig.app.json  tsconfig.armor.json  tsconfig.e2e.json  tsconfig.json  tsconfig.tools.json  tsconfig.weapons.json  vite.config.ts
.githooks/: pre-commit
docs/: development.md  library-investigation.md  typescript-solid-modernization.md  weapon-data.md
functions/_lib/: bungie-oauth.ts
functions/api/bungie/oauth/: logout.ts  refresh.ts  token.ts
public/: _headers
scripts/: armor-rust-toolchain.ts  audit-weapon-engine.ts  build-app.mjs  build-armor-wasm.ts  build-weapon-catalog.ts  build-weapon-wasm.ts  bump-version.ts  debug-bungie-sockets.ts  emit-static-shell.mjs  generate-panda.mjs  run-armor-cargo.ts  run-rust.ts  weapon-catalog-rules.test.ts  weapon-catalog-rules.ts
src/: app-version.ts  app.tsx  entry-client.tsx  entry-server.tsx
src/app/styles/: global.css  panda.css
src/components/: product-nav.tsx
src/features/armor/: app-theme.ts  armor-calculator-context.tsx  calculator-preferences.test.ts  calculator-preferences.ts  calculator-view-model.test.ts  calculator-view-model.ts  display-metadata.test.ts  display-metadata.ts  manifest.test.ts  manifest.ts  normalize-exotic-class-items.test.ts  normalize.test.ts  normalize.ts  op-set-bonuses.test.ts  op-set-bonuses.ts  result-display.test.ts  result-display.ts  solver-worker-client.ts  solver-worker.ts  stat-effects.test.ts  stat-effects.ts  stat-hashes.ts  subclass-fragments.test.ts  subclass-fragments.ts  target-cap-state.test.ts  target-cap-state.ts  types.ts
src/features/armor/api/: equip-build.ts  profile-items.ts  socket-plugs.ts  subclass-import.ts
src/features/bungie/: api.ts  config.ts  oauth.ts
src/features/storage/: indexed-json.ts
src/features/weapons/: calculations.test.ts  calculations.ts  catalog.test.ts  catalog.ts  compare-library.test.ts  compare-library.ts  oracle-engine.test.ts  oracle-engine.ts  search.test.ts  search.ts  selection-url.test.ts  selection-url.ts  types.ts
src/routes/: index.tsx  weapons.tsx
tests/e2e/: weapons-accessibility.spec.ts  weapons.spec.ts
(+47 files in other folders)
