[workspace]
members = [
    "packages/armor-engine/crates/core",
    "packages/armor-engine/crates/wasm",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.150"
wasm-bindgen = "0.2.126"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
