[workspace]
members = [
    "packages/armor-engine/crates/core",
    "packages/armor-engine/crates/wasm",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.150"
wasm-bindgen = "0.2.126"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Stable, high-signal nursery checks.
collection_is_never_read = "warn"
redundant_clone = "warn"
suspicious_operation_groupings = "warn"

# Keep production and test code free of accidental debugging and panic shortcuts.
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
exit = "warn"
expect_used = "warn"
mem_forget = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"

# These arrays model shared solver state; references are clearer than repeated copies.
trivially_copy_pass_by_ref = { level = "allow", priority = 1 }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
